Thu Dec 10 19:26:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Home_Servant_Impl_T.cpp:
          Check return value sprintf and use is_nil

Thu Dec 10 19:15:15 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLQoS/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLSampleRejected/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLUnexpStat/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/Event_Connection_Test/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/Getter/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/KeyedSamples/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/KeyedWriter/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/ListenNotEnabled/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/ListenOneByOne/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/NonChangeableAttribute/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/PSLDeadline/descriptors/run_test.pl:
        * examples/Hello/descriptors/run_test_alias.pl:
          Resolved some fuzz errors/warnings.

Thu Dec 10 19:03:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/AMI/AMI_exec.h:
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
          Removed generated headers

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
          const changes and improved debug messages

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp:
          Const change

        * DAnCE/RepositoryManager/Repository_Manager_Module.cpp:
          Fixed typo in debug statement

Thu Dec 109 17:02:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>