@@ -105,33 +105,33 @@ sub kill_open_processes {
 }
 
 sub run_node_daemons {
-  for ($i = 0; $i < $nr_daemon; ++$i) {
-      $iorbase = $iorbases[$i];
-      $iorfile = $iorfiles[$i];
-      $port = $ports[$i];
-      $nodename = $nodenames[$i];
-      $iiop = "iiop://localhost:$port";
-      $node_app = "$CIAO_ROOT/bin/ciao_componentserver";
+    for ($i = 0; $i < $nr_daemon; ++$i) {
+        $iorbase = $iorbases[$i];
+        $iorfile = $iorfiles[$i];
+        $port = $ports[$i];
+        $nodename = $nodenames[$i];
+        $iiop = "iiop://localhost:$port";
+        $node_app = "$CIAO_ROOT/bin/ciao_componentserver";
 
-      $d_cmd = "$DANCE_ROOT/bin/dance_node_manager";
-      $d_param = "-ORBEndpoint $iiop -s $node_app -n $nodename=$iorfile -t 30 --domain-nc corbaloc:rir:/NameService";
+        $d_cmd = "$DANCE_ROOT/bin/dance_node_manager";
+        $d_param = "-ORBEndpoint $iiop -s $node_app -n $nodename=$iorfile -t 30 --domain-nc corbaloc:rir:/NameService";
 
-      print "Run dance_node_manager with $d_param\n";
+        print "Run dance_node_manager with $d_param\n";
 
-      $DEAMONS[$i] = $tg_daemons[$i]->CreateProcess ($d_cmd, $d_param);
-      $DEAMONS[$i]->Spawn ();
+        $DEAMONS[$i] = $tg_daemons[$i]->CreateProcess ($d_cmd, $d_param);
+        $DEAMONS[$i]->Spawn ();
 
-      if ($tg_daemons[$i]->WaitForFileTimed($iorbase,
-                                      $tg_daemons[$i]->ProcessStartWaitInterval ()) == -1) {
-          print STDERR
-              "ERROR: The ior $iorfile file of node daemon $i could not be found\n";
-          for (; $i >= 0; --$i) {
-              $DEAMONS[$i]->Kill (); $DEAMONS[$i]->TimedWait (1);
-          }
-          return -1;
-      }
-  }
-  return 0;
+        if ($tg_daemons[$i]->WaitForFileTimed($iorbase,
+                                        $tg_daemons[$i]->ProcessStartWaitInterval ()) == -1) {
+            print STDERR
+                "ERROR: The ior $iorfile file of node daemon $i could not be found\n";
+            for (; $i >= 0; --$i) {
+                $DEAMONS[$i]->Kill (); $DEAMONS[$i]->TimedWait (1);
+            }
+            return -1;
+        }
+    }
+    return 0;
 }
 
 create_targets ();
